-- =============================================================================
-- Créneau Médea — Supabase schema & Row-Level Security (RLS)
-- Run this in the Supabase SQL editor (Dashboard -> SQL Editor -> New query).
--
-- Important: `users.id` is a `uuid` that references Supabase Auth (`auth.users`).
-- This is because the app authenticates through Supabase Auth, so every app user's
-- id is the Auth user's id. Passwords are handled by Supabase Auth, NOT stored here.
-- =============================================================================

-- -----------------------------------------------------------------------------
-- Enums
-- -----------------------------------------------------------------------------
create type public.game_status as enum ('pending', 'cancelled', 'in_progress', 'finished');
create type public.request_status as enum ('pending', 'accepted', 'rejected');
create type public.attendance_status as enum ('attended', 'absent');

-- -----------------------------------------------------------------------------
-- pitches
-- -----------------------------------------------------------------------------
create table if not exists public.pitches (
  id bigint generated by default as identity primary key,
  name text not null,
  location text,
  condition text check (condition in ('good', 'average', 'bad')),
  created_at timestamptz not null default now(),
  updated_at timestamptz not null default now()
);

-- -----------------------------------------------------------------------------
-- users  (id = Supabase Auth user id)
-- -----------------------------------------------------------------------------
create table if not exists public.users (
  id uuid primary key references auth.users(id) on delete cascade,
  fullname text,
  username text unique,
  phone_number text,
  position text check (position in ('حارس مرمى', 'دفاع', 'وسط', 'هجوم')),
  level text check (level in ('beginner', 'intermediate', 'advanced')),
  rating numeric(3,2) not null default 0.00,
  rating_count integer not null default 0,
  created_at timestamptz not null default now(),
  updated_at timestamptz not null default now()
);

-- -----------------------------------------------------------------------------
-- games
-- -----------------------------------------------------------------------------
create table if not exists public.games (
  id bigint generated by default as identity primary key,
  title text,
  starting_time timestamptz not null,
  ending_time timestamptz not null,
  pitch_id bigint not null references public.pitches(id) on delete restrict,
  body text,
  user_id uuid not null references public.users(id) on delete cascade,
  status public.game_status not null default 'pending',
  price integer,
  max_players integer not null default 10 check (max_players between 1 and 30),
  archived_at timestamptz,
  created_at timestamptz not null default now(),
  updated_at timestamptz not null default now()
);
create index if not exists games_pitch_id_idx on public.games (pitch_id);
create index if not exists games_user_id_idx on public.games (user_id);
create index if not exists games_starting_time_idx on public.games (starting_time);

-- In-app event inbox. This complements device reminders and lets users see
-- request/approval/cancellation activity even when notifications are off.
create table if not exists public.notifications (
  id bigint generated by default as identity primary key,
  user_id uuid not null references public.users(id) on delete cascade,
  title text not null,
  body text not null,
  type text not null,
  game_id bigint references public.games(id) on delete cascade,
  read_at timestamptz,
  created_at timestamptz not null default now()
);
create index if not exists notifications_user_id_idx on public.notifications (user_id, created_at desc);

-- -----------------------------------------------------------------------------
-- needs & game_needs
-- -----------------------------------------------------------------------------
create table if not exists public.needs (
  id bigint generated by default as identity primary key,
  name text not null unique
);

create table if not exists public.game_needs (
  game_id bigint not null references public.games(id) on delete cascade,
  need_id bigint not null references public.needs(id) on delete cascade,
  quantity integer not null default 1,
  primary key (game_id, need_id)
);

-- -----------------------------------------------------------------------------
-- game_requests
-- -----------------------------------------------------------------------------
create table if not exists public.game_requests (
  id bigint generated by default as identity primary key,
  game_id bigint not null references public.games(id) on delete cascade,
  user_id uuid not null references public.users(id) on delete cascade,
  status public.request_status not null default 'pending',
  attendance_status public.attendance_status,
  archived_at timestamptz,
  created_at timestamptz not null default now(),
  updated_at timestamptz not null default now(),
  unique (game_id, user_id)
);
create index if not exists game_requests_game_id_idx on public.game_requests (game_id);

create or replace function public.accepted_game_counts(game_ids bigint[])
returns table(game_id bigint, accepted_count bigint)
language sql stable security definer set search_path = public as $$
  select game.id, count(request.id)
  from public.games game
  left join public.game_requests request
    on request.game_id = game.id and request.status = 'accepted'
  where game.id = any(game_ids)
  group by game.id;
$$;
revoke all on function public.accepted_game_counts(bigint[]) from public;
grant execute on function public.accepted_game_counts(bigint[]) to authenticated;

-- -----------------------------------------------------------------------------
-- player_ratings
-- -----------------------------------------------------------------------------
create table if not exists public.player_ratings (
  id bigint generated by default as identity primary key,
  game_request_id bigint not null unique references public.game_requests(id) on delete cascade,
  game_id bigint not null references public.games(id) on delete cascade,
  player_id uuid not null references public.users(id) on delete cascade,
  organizer_id uuid not null references public.users(id) on delete cascade,
  rating integer not null check (rating between 1 and 5),
  created_at timestamptz not null default now()
);
create index if not exists player_ratings_game_id_idx on public.player_ratings (game_id);
create index if not exists player_ratings_player_id_idx on public.player_ratings (player_id);

-- -----------------------------------------------------------------------------
-- Row-Level Security (RLS)
-- -----------------------------------------------------------------------------
alter table public.pitches enable row level security;
alter table public.users enable row level security;
alter table public.games enable row level security;
alter table public.needs enable row level security;
alter table public.game_needs enable row level security;
alter table public.game_requests enable row level security;
alter table public.player_ratings enable row level security;
alter table public.notifications enable row level security;

-- Pitches / needs: public read, but only authenticated users may write
create policy "pitch_select" on public.pitches for select using (true);
create policy "pitch_insert" on public.pitches for insert with check (auth.uid() is not null);

create policy "needs_select" on public.needs for select using (true);
create policy "needs_insert" on public.needs for insert with check (auth.uid() is not null);

-- users: a player can read their own profile. An organizer can read the
-- profile of a player who requested to join one of their games. This keeps
-- personal fields such as phone_number out of a general signed-in directory.
create policy "users_select" on public.users for select using (
  auth.uid() = id
  or exists (
    select 1
    from public.game_requests request
    join public.games game on game.id = request.game_id
    where request.user_id = users.id and game.user_id = auth.uid()
  )
  or (
    auth.uid() is not null
    and exists (select 1 from public.games game where game.user_id = users.id)
  )
);
create policy "users_insert" on public.users for insert with check (auth.uid() = id);
create policy "users_update" on public.users for update using (auth.uid() = id);

-- games: everyone can read; organizer (or the creator) may insert/update; organizer may delete
create policy "games_select" on public.games for select using (true);
create policy "games_insert" on public.games for insert with check (auth.uid() = user_id);
create policy "games_update" on public.games for update using (auth.uid() = user_id);
create policy "games_delete" on public.games for delete using (auth.uid() = user_id);

-- game_needs are managed alongside games
create policy "game_needs_select" on public.game_needs for select using (true);
create policy "game_needs_insert" on public.game_needs for insert with check (
  exists (select 1 from public.games where games.id = game_needs.game_id and games.user_id = auth.uid())
);

-- game_requests: authenticated users interact with their own requests
create policy "game_requests_select" on public.game_requests for select using (
  auth.uid() = user_id
  or exists (select 1 from public.games where games.id = game_requests.game_id and games.user_id = auth.uid())
);
create policy "game_requests_insert" on public.game_requests for insert with check (auth.uid() = user_id);
create policy "game_requests_update" on public.game_requests for update using (
  auth.uid() = user_id
  or exists (select 1 from public.games where games.id = game_requests.game_id and games.user_id = auth.uid())
);
create policy "game_requests_delete" on public.game_requests for delete using (
  auth.uid() = user_id
  or exists (select 1 from public.games where games.id = game_requests.game_id and games.user_id = auth.uid())
);

-- player_ratings: a user may submit a rating as the organizer
create policy "player_ratings_select" on public.player_ratings for select using (true);
create policy "player_ratings_insert" on public.player_ratings for insert with check (
  auth.uid() = organizer_id
  and exists (
    select 1 from public.game_requests request
    join public.games game on game.id = request.game_id
    where request.id = player_ratings.game_request_id
      and request.game_id = player_ratings.game_id
      and request.user_id = player_ratings.player_id
      and request.status = 'accepted'
      and game.user_id = auth.uid()
  )
);

create or replace function public.refresh_player_rating()
returns trigger language plpgsql security definer set search_path = public as $$
declare target_player uuid;
begin
  if tg_op = 'DELETE' then
    target_player := old.player_id;
  else
    target_player := new.player_id;
  end if;
  update public.users
  set rating = coalesce((select round(avg(rating)::numeric, 2) from public.player_ratings where player_id = target_player), 0),
      rating_count = (select count(*) from public.player_ratings where player_id = target_player),
      updated_at = now()
  where id = target_player;
  return null;
end;
$$;
create trigger refresh_player_rating_after_change after insert or update or delete on public.player_ratings
for each row execute function public.refresh_player_rating();

create policy "notifications_select" on public.notifications for select using (auth.uid() = user_id);
create policy "notifications_update" on public.notifications for update using (auth.uid() = user_id);
create policy "notifications_insert" on public.notifications for insert with check (
  auth.uid() = user_id
  or exists (select 1 from public.games where games.id = notifications.game_id and games.user_id = auth.uid())
);
